--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="container">
   <h1>Hello, {{ title }}</h1>
+  <h2>Proving the connections of the todo list and todo list items</h2>
+  <app-todo-list-item> </app-todo-list-item>
+  <app-todo-list></app-todo-list>
 </div>
