getting the initial items in for the add functionality of the todo list and validating the wiring.

--- a/src/app/todo-list-item/todo-list-item.component.html
+++ b/src/app/todo-list-item/todo-list-item.component.html
@@ -1,1 +1,5 @@
 <p>todo-list-item works!</p>
+<div class="todo-list-item">
+  <input type="checkbox" [checked]="todo?.completed" (change)="(onChecked)" />
+  <span [class.completed]="todo?.completed">{{ todo?.text }}</span>
+</div>
