--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,1 +1,19 @@
-<p>todo-list works!</p>
+<div class="todo-list">
+  <h1>Todo List</h1>
+  <form (ngSubmit)="addTodo()">
+    <input
+      type="text"
+      [(ngModel)]="newTodo"
+      name="newTodo"
+      placeholder="Add a new todo"
+      required
+    />
+    <button type="submit">Add</button>
+  </form>
+  <div *ngFor="let todo of todos; let i = index">
+    <app-todo-list-item
+      [todo]="todo"
+      (markComplete)="markCompleted(i)"
+    ></app-todo-list-item>
+  </div>
+</div>
