Getting the todolist item working and marking completed with a strike through

--- a/src/app/todo-list-item/todo-list-item.component.html
+++ b/src/app/todo-list-item/todo-list-item.component.html
@@ -1,4 +1,4 @@
 <div class="todo-list-item">
-  <input type="checkbox" [checked]="todo?.completed" (change)="(onChecked)" />
+  <input type="checkbox" [checked]="todo?.completed" (change)="onChecked()" />
   <span [class.completed]="todo?.completed">{{ todo?.text }}</span>
 </div>
