Adding in a delete function to the right of the text of the todo list item and implementing the delete functionality in a synchronous manner

--- a/src/app/todo-list-item/todo-list-item.component.html
+++ b/src/app/todo-list-item/todo-list-item.component.html
@@ -1,4 +1,5 @@
 <div class="todo-list-item">
   <input type="checkbox" [checked]="todo?.completed" (change)="onChecked()" />
   <span [class.completed]="todo?.completed">{{ todo?.text }}</span>
+  <button (click)="onDelete()">X</button>
 </div>
