--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -14,6 +14,7 @@
     <app-todo-list-item
       [todo]="todo"
       (markComplete)="markComplete(i)"
+      (deleteItem)="deleteItem(i)"
     ></app-todo-list-item>
   </div>
 </div>
