Cleaning up code and adding in styling so that it looks and feels better than raw html

--- a/src/app/components/todo-list-item/todo-list-item.component.html
+++ b/src/app/components/todo-list-item/todo-list-item.component.html
@@ -1,5 +1,12 @@
 <div class="todo-list-item">
-  <input type="checkbox" [checked]="todo?.completed" (change)="onChecked()" />
-  <span [class.completed]="todo?.completed">{{ todo?.text }}</span>
-  <button (click)="onDelete()">X</button>
+  <input
+    class="checkbox"
+    type="checkbox"
+    [checked]="todo?.completed"
+    (change)="onChecked()"
+  />
+  <span class="todo-text" [class.completed]="todo?.completed">{{
+    todo?.text
+  }}</span>
+  <button class="delete-button" (click)="onDelete()">X</button>
 </div>
