--- a/src/app/components/todo-list-item/todo-list-item.component.scss
+++ b/src/app/components/todo-list-item/todo-list-item.component.scss
@@ -1,3 +1,36 @@
 .completed {
   text-decoration: line-through;
 }
+.delete-button:hover {
+  color: #c9302c;
+}
+.delete-button {
+  background: none;
+  border: none;
+  color: #d9534f;
+  font-size: 16px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+.todo-text {
+  flex: 1;
+  font-size: 16px;
+  color: #333;
+}
+.checkbox {
+  margin-right: 10px;
+}
+.todo-list-item:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.todo-list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #f9f9f9;
+  border-radius: 24px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
