making it pretty, getting styling in place to make a nice todo list app with look and feel with bubble style items and red x buttons for delete.

--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -5,6 +5,7 @@
       class="input"
       type="text"
       [(ngModel)]="newTodo"
+      autocomplete="off"
       name="newTodo"
       placeholder="Add a new todo"
       required
